@@ -6,10 +6,16 @@ import com.study.ioc.entity.BeanDefinition;
 import com.study.ioc.exception.BeanInstantiationException;
 import com.study.ioc.exception.NoSuchBeanDefinitionException;
 import com.study.ioc.exception.NoUniqueBeanOfTypeException;
+import com.study.ioc.processor.BeanFactoryPostProcessor;
+import com.study.ioc.processor.BeanPostProcessor;
 import com.study.ioc.reader.BeanDefinitionReader;
 import com.study.ioc.reader.sax.XmlBeanDefinitionReader;
+import lombok.SneakyThrows;
 
+import javax.annotation.PostConstruct;
+import java.lang.reflect.InvocationTargetException;
 import java.lang.reflect.Method;
+import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.HashMap;
 import java.util.List;
@@ -18,6 +24,8 @@ import java.util.Map;
 public class GenericApplicationContext implements ApplicationContext {
 
     private Map<String, Bean> beans = new HashMap<>();
+    private List<BeanFactoryPostProcessor> serviceFactoryBeans = new ArrayList<>();
+    private Map<String, Bean> serviceBeans = new HashMap<>();
 
     GenericApplicationContext() {
     }
@@ -29,9 +37,12 @@ public class GenericApplicationContext implements ApplicationContext {
     public GenericApplicationContext(BeanDefinitionReader definitionReader) throws InstantiationException, IllegalAccessException {
         Map<String, BeanDefinition> beanDefinitions = definitionReader.getBeanDefinition();
 
+        createServiceBeans(beanDefinitions);
+        processBeanDefinitions(beanDefinitions);
         beans = createBeans(beanDefinitions);
         injectValueDependencies(beanDefinitions, beans);
         injectRefDependencies(beanDefinitions, beans);
+        postProcessBeans();
     }
 
     @Override
@@ -76,12 +87,14 @@ public class GenericApplicationContext implements ApplicationContext {
     Map<String, Bean> createBeans(Map<String, BeanDefinition> beanDefinitionMap) throws InstantiationException, IllegalAccessException {
         try {
             for (Map.Entry<String, BeanDefinition> entry : beanDefinitionMap.entrySet()) {
-                Object object = Class.forName(entry.getValue().getClassName()).newInstance();
+                Object object = Class.forName(entry.getValue().getClassName()).getDeclaredConstructor().newInstance();
                 Bean newBean = new Bean(entry.getValue().getId(), object);
                 beans.put(entry.getKey(), newBean);
             }
         } catch (ClassNotFoundException e) {
             throw new BeanInstantiationException("BeanInstantiation failed", e);
+        } catch (NoSuchMethodException | InvocationTargetException e){
+            e.printStackTrace();
         }
         return beans;
     }
@@ -105,6 +118,7 @@ public class GenericApplicationContext implements ApplicationContext {
         }
     }
 
+    @SneakyThrows
     void injectValue(Object object, Method classMethod, String propertyValue) {
         List<Method> methods = Arrays.stream(object.getClass().getDeclaredMethods()).toList();
         Class<?>[] parameterTypes = classMethod.getParameterTypes();
@@ -115,24 +129,17 @@ public class GenericApplicationContext implements ApplicationContext {
 
         if (methodClassName.equalsIgnoreCase("int")) {
             int intValueOfProperty = Integer.parseInt(propertyValue);
-            try {
-                classMethod.invoke(object, intValueOfProperty);
-            } catch (Exception e) {
-                e.printStackTrace();
-            }
+            classMethod.invoke(object, intValueOfProperty);
             return;
         }
-        try {
-            classMethod.invoke(object, propertyValue);
-        } catch (Exception e) {
-            e.printStackTrace();
-        }
+        classMethod.invoke(object, propertyValue);
     }
 
     void setBeans(Map<String, Bean> beans) {
         this.beans = beans;
     }
 
+    @SneakyThrows
     private void clarifyMethodAndInjectValue(Bean bean, String keyValue, String value) {
         Method[] declaredMethods = bean.getValue().getClass().getDeclaredMethods();
         String methodName = "set" + keyValue.substring(0, 1).toUpperCase() + keyValue.substring(1);
@@ -142,33 +149,80 @@ public class GenericApplicationContext implements ApplicationContext {
         Class<?>[] parameterTypes = methodClass.getParameterTypes();
         String methodClassName = parameterTypes[0].getName();
         if (methodClassName.equals("int")) {
-            try {
-                Method neededMethod = bean.getValue().getClass().getDeclaredMethod(methodName, Integer.TYPE);
-                injectValue(bean.getValue(), neededMethod, value);
-            } catch (Exception e) {
-                e.printStackTrace();
-            }
+            Method neededMethod = bean.getValue().getClass().getDeclaredMethod(methodName, Integer.TYPE);
+            injectValue(bean.getValue(), neededMethod, value);
             return;
         }
-
-        try {
-            Method neededMethod = bean.getValue().getClass().getDeclaredMethod(methodName, String.class);
-            injectValue(bean.getValue(), neededMethod, String.valueOf(value));
-        } catch (Exception e) {
-            e.printStackTrace();
-        }
+        Method neededMethod = bean.getValue().getClass().getDeclaredMethod(methodName, String.class);
+        injectValue(bean.getValue(), neededMethod, String.valueOf(value));
     }
 
+    @SneakyThrows
     private void clarifyMethodAndInjectRefDependencies(Bean bean, String fieldName, Object value) {
         Method[] declaredMethods = bean.getValue().getClass().getDeclaredMethods();
         String methodName = "set" + fieldName.substring(0, 1).toUpperCase() + fieldName.substring(1);
         Method methodClass = Arrays.stream(declaredMethods)
                 .filter(method -> method.getName().equals(methodName))
                 .findFirst().get();
-        try {
-            methodClass.invoke(bean.getValue(), value);
-        } catch (Exception e) {
-            e.printStackTrace();
+        methodClass.invoke(bean.getValue(), value);
+    }
+
+    @SneakyThrows
+    private void createServiceBeans(Map<String, BeanDefinition> beanDefinitions) {
+        for (Map.Entry<String, BeanDefinition> entry : beanDefinitions.entrySet()) {
+            BeanDefinition entryValue = entry.getValue();
+            Class<?> clazz = Class.forName(entryValue.getClassName());
+
+            if (clazz.isAssignableFrom(BeanFactoryPostProcessor.class) ){
+                BeanFactoryPostProcessor newFactoryPostProcessor = (BeanFactoryPostProcessor) Class.forName(clazz.getName()).getDeclaredConstructor().newInstance();
+                serviceFactoryBeans.add(newFactoryPostProcessor);
+            }
+
+            if (clazz.isAssignableFrom(BeanPostProcessor.class) ){
+                BeanPostProcessor newPostProcessor = (BeanPostProcessor) Class.forName(clazz.getName()).getDeclaredConstructor().newInstance();
+                Bean newBean = new Bean(entryValue.getId(), newPostProcessor);
+                serviceBeans.put(entry.getKey(), newBean);
+            }
         }
     }
+
+    private void processBeanDefinitions(Map<String, BeanDefinition> beanDefinitions) {
+        List<BeanDefinition> beanDefinitionList = new ArrayList<>();
+        for (Map.Entry<String, BeanDefinition> entry : beanDefinitions.entrySet()) {
+            beanDefinitionList.add(entry.getValue());
+        }
+
+        serviceFactoryBeans.stream()
+                .forEach(factoryBean -> factoryBean.postProcessorBeanFactory(beanDefinitionList));
+    }
+
+    private void postProcessBeans() {
+        for (Map.Entry<String, Bean> entry : serviceBeans.entrySet()) {
+            Bean bean = entry.getValue();
+            BeanPostProcessor beanPostProcessor = (BeanPostProcessor) bean.getValue();
+
+            beanPostProcessor.postProcessBeforeInitialization(bean, entry.getKey());
+            callInitMethods();
+            beanPostProcessor.postProcessAfterInitialization(bean, entry.getKey());
+        }
+    }
+
+    @SneakyThrows
+    private void callInitMethods() {
+
+        for (Map.Entry<String, Bean> entry : serviceBeans.entrySet()) {
+            Bean bean = entry.getValue();
+            Class<? extends Object> clazz = bean.getValue().getClass();
+
+            Method[] methods = clazz.getMethods();
+            for (Method method : methods) {
+                if (method.getAnnotation(PostConstruct.class) != null) {
+                    method.invoke(bean.getValue());
+                }
+            }
+        }
+
+    }
+
+
 }
